# claude-tg

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  INSTALL_RU.md  README.md  README.txt  SECURITY.md  config.example.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start-claude.bat  start-claude.sh  start-codex.bat  start-codex.sh  start.bat  start.sh
.github/workflows/: ci.yml
bot/: claude_runner.py  config.py  db.py  external_sessions.py  limit_detector.py  main.py  maintenance.py  message_formatter.py  prompts.py  rate_limiter.py  resume_worker.py  session_manager.py  session_watcher.py  telegram_handler.py  updater.py
bot/providers/: __init__.py  _env.py  _shim.py  _tracking.py  _wsl.py  base.py  claude.py  codex.py
deploy/: claude-tg.service
tests/: test_claude_runner.py  test_config.py  test_db.py  test_limit_detector.py  test_message_formatter.py  test_npm_shim.py  test_path_traversal.py  test_prompts.py  test_providers_env.py  test_rate_limiter.py  test_resume_worker.py  test_session_manager.py  test_session_watcher.py  test_updater.py  test_watcher_log.py
